`doPinned()` just requires more privileges